<resources>
    <string name="app_name">Gastimate</string>
    <string name="city_mpg">City MPG:</string>
    <string name="highway_mpg">Highway MPG:</string>
    <string name="check_vehicle">Check Vehicle</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="ok">OK</string>
    <string name="originDestination">Enter an Origin and Destination</string>
    <string name="internetConnection">You don\'t seem to be connected to the internet. Check your connection and try again.</string>
    <string name="home_action">home_action</string>
    <string name="back_to_list">Back to List</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="gastimate">Gastimate</string>
</resources>
